compiler/toc-analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_no_const_expr-4.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "const b := a"
---
"b"@(FileId(1), 6..7) -> ConstError { kind: NotConstExpr(Binding(PackageId(0), Spanned("a", SpanId(4)))), span: (FileId(1), 11..12) }


