compiler/toc-analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_no_const_expr-5.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
assertion_line: 13
expression: "const b := ()"

---
"b"@(FileId(1), 6..7) -> ConstError { kind: MissingExpr, span: (dummy) }


