compiler/toc-analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_outside_range_constrained-11.snap
---
source: compiler/toc-analysis/src/const_eval/test.rs
expression: "type e : enum(a, b, c) const a : e.a .. e.b := e.a const _:=a"
---
"a"@"src/main.t:29..30" -> EnumVariant(TypeId(Id { value: 2 }), 0)
"_"@"src/main.t:57..58" -> EnumVariant(TypeId(Id { value: 2 }), 0)
