compiler/toc-analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_outside_range_constrained-12.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "type e : enum(a, b, c) const a : e.a .. e.b := e.b const _:=a"
---
"a"@(FileId(1), 29..30) -> EnumVariant(TypeId(Id { value: 2 }), 1)
"_"@(FileId(1), 57..58) -> EnumVariant(TypeId(Id { value: 2 }), 1)


