compiler/toc-analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_outside_range_constrained-4.snap
---
source: compiler/toc-analysis/src/const_eval/test.rs
expression: "const a : false .. false := false const _:=a"
---
"a"@"src/main.t:6..7" -> Bool(false)
"_"@"src/main.t:40..41" -> Bool(false)
