compiler/toc-analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_outside_range_constrained-9.snap
---
source: compiler/toc-analysis/src/const_eval/test.rs
expression: "const a : 'a' .. 'b' := \"a\" const _:=a"
---
"a"@"src/main.t:6..7" -> String("a")
"_"@"src/main.t:34..35" -> Char('a')
