compiler/toc-analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_outside_range_constrained.snap
---
source: compiler/toc-analysis/src/const_eval/test.rs
expression: "const a : 1 .. 2 := 1 const _:=a"
---
"a"@"src/main.t:6..7" -> Integer(ConstInt { magnitude: 1, sign: Positive, width: As32 })
"_"@"src/main.t:28..29" -> Integer(ConstInt { magnitude: 1, sign: Positive, width: As32 })
