compiler/toc-analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_real_overflow-10.snap
---
source: compiler/toc-analysis/src/const_eval/test.rs
expression: (-10.0) ** 309
---
"_"@(FileId(1), 6..7) -> ConstError { kind: RealOverflow, span: (FileId(1), 19..21) }

error at (FileId(1), 19..21): cannot compute expression at compile-time
| error for (FileId(1), 19..21): real overflow in compile-time expression

