compiler/toc-analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_real_overflow-2.snap
---
source: compiler/toc-analysis/src/const_eval/test.rs
expression: "-1e308 + (-1e308)"
---
"_"@(FileId(1), 6..7) -> ConstError { kind: RealOverflow, span: (FileId(1), 18..19) }

error at (FileId(1), 18..19): cannot compute expression at compile-time
| error for (FileId(1), 18..19): real overflow in compile-time expression

